--- a/app/src/main/res/layout/user_product_list.xml
+++ b/app/src/main/res/layout/user_product_list.xml
@@ -75,14 +75,16 @@
 
                 <Button
                     android:id="@+id/addToCart"
-                    android:layout_width="@dimen/_80sdp"
-                    android:layout_height="@dimen/_22sdp"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/_30sdp"
+                    android:layout_marginStart="20dp"
                     android:layout_marginTop="5dp"
+                    android:layout_marginEnd="20dp"
                     android:layout_marginBottom="10dp"
                     android:background="@color/logo_bg"
                     android:text="Add To cart"
-                    android:textSize="@dimen/_9ssp"
-                    android:textColor="@color/logo"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_7ssp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
