--- a/app/src/main/res/navigation/user_navigation.xml
+++ b/app/src/main/res/navigation/user_navigation.xml
@@ -7,24 +7,24 @@
 
     <fragment
         android:id="@+id/navigation_user_home"
-        android:name="com.example.handicrafthorizon.User.ui.home.UserHomeFragment"
+        android:name="com.example.foodmed.User.ui.home.UserHomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_user_home" />
 
     <fragment
         android:id="@+id/navigation__user_cart"
-        android:name="com.example.handicrafthorizon.User.ui.cart.UserCartFragment"
+        android:name="com.example.foodmed.User.ui.cart.UserCartFragment"
         android:label="Cart"
         tools:layout="@layout/fragment_user_cart" />
     <fragment
         android:id="@+id/navigation_user_orders"
-        android:name="com.example.handicrafthorizon.User.ui.orders.UserOrderFragment"
+        android:name="com.example.foodmed.User.ui.orders.UserOrderFragment"
         android:label="Orders"
         tools:layout="@layout/fragment_user_order" />
 
     <fragment
         android:id="@+id/navigation_user_profile"
-        android:name="com.example.handicrafthorizon.User.ui.profile.UserProfileFragment"
+        android:name="com.example.foodmed.User.ui.profile.UserProfileFragment"
         android:label="Profile"
         tools:layout="@layout/fragment_user_profile" />
 
