--- a/app/src/main/res/drawable/et_bg.xml
+++ b/app/src/main/res/drawable/et_bg.xml
@@ -1,20 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
+    <solid android:color="#FFFFFF" />
 
-
-    <corners
-        android:bottomLeftRadius="20dp"
-        android:bottomRightRadius="20dp"
-        android:topLeftRadius="0dp"
-        android:topRightRadius="20dp"
-
-        />
     <stroke
-        android:width="1dp"
-        android:color="@color/logo"
-
-
+        android:width="3dp"
+        android:color="#2f6699" />
+    <corners
+        android:radius="10dp"
         />
 
 </shape>
