--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="logo_bg">#0E273D</color>
-    <color name="logo">#CA9D58</color>
+    <color name="logo_bg">#71B149</color>
+    <color name="logo">#4293CC</color>
+    <color name="red">#FF0000</color>
+
+
+    #
 </resources>
