--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.HandicraftHorizonActionbar" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.FoodMedActionbar" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/logo_bg</item>
         <item name="colorPrimaryVariant">@color/logo_bg</item>
@@ -13,7 +13,7 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
-    <style name="Theme.HandicraftHorizon" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Theme.FoodMed" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/logo_bg</item>
         <item name="colorPrimaryVariant">@color/logo_bg</item>
